# codex_somersault

./: .gitignore  AGENTS.md  CLAUDE.md
.claude/: settings.json
.devcontainer/: claude-global.md  cloud-setup.sh  dev-setup.sh
.github/workflows/: cc-to-sdk.yml
CC-to-SDK/: .gitignore  CLAUDE.md
CC-to-SDK/Codex App server/: Codex 하네스 활용하기 OpenAI가 App Server를 구축한 방법.md
CC-to-SDK/app-server/: .gitignore  README.npm.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
CC-to-SDK/claude-plugin-codex/: README.md  package.json
CC-to-SDK/harness/: API-STABILITY.md  CLAUDE.md  README.md  package-lock.json  package.json
CC-to-SDK/probes/: package-lock.json  package.json  smoke.ts  tsconfig.json
CC-to-SDK/scripts/: drift-check.mjs  parity-areas.mjs  render-parity.mjs  validate-parity.mjs
CC-to-SDK/tui/: CLAUDE.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
Claude Code Src/: CLAUDE.md  package.json  tsconfig.json
Claude Code Src/scripts/: setup-ant-stubs.sh
Claude Code Src/src/: Tool.ts  bundle-shim.ts  globals.d.ts  (+2 more)
codex-rs/: Cargo.toml
codex-rs/ext/lsp-client/: BUILD.bazel  Cargo.toml
codex-rs/ext/lsp-client/src/: config.rs  config_tests.rs  diagnostics.rs  diagnostics_tests.rs  extension.rs  extension_tests.rs  format.rs  format_tests.rs  instance.rs  instance_tests.rs  lib.rs  manager.rs  manager_tests.rs  schema.rs  smoke_tests.rs  test_support.rs  tool.rs  tool_tests.rs  transport.rs  transport_tests.rs
docs/: dreaming-v3-codex-memory-report.md  fork-overview.md
(+1014 files in other folders)
