[package]
edition.workspace = true
license.workspace = true
name = "codex-lsp"
version.workspace = true

[lib]
name = "codex_lsp"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
codex-config = { workspace = true }
codex-core = { workspace = true }
codex-extension-api = { workspace = true }
codex-protocol = { workspace = true }
codex-tools = { workspace = true }
lru = { workspace = true }
lsp-types = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "process", "sync", "macros", "rt"] }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["io-util", "process", "sync", "macros", "rt", "test-util", "time"] }
